# WarframeDropDataModelsCPP

./: .gitignore  CMakeLists.txt  README.md  api_explorer.cpp  main.cpp
cmake/: warframe_modelsConfig.cmake.in
include/Utils/: Error.h  FixedKeyMap.h  Path.h  Utils.h
include/Warframe/: Manifest.h  Models.h
include/Warframe/API/: Client.h  ManifestIndex.h
include/Warframe/Manifest/Export/: Customs.h  Drones.h  Flavour.h  FusionBundles.h  Gear.h  Generic.h  Keys.h  Manifest.h  Recipes.h  Regions.h  RelicArcane.h  Resources.h  Sentinels.h  SortieRewards.h  Upgrades.h  Warframes.h  Weapons.h
include/Warframe/Models/: AvatarModel.h  BlueprintModel.h  HubRewardModel.h  RewardModel.h  SyndicatesModel.h
include/warframe_models/: ModModel.h  RelicModel.h  StarchartEventModel.h  StarchartModel.h  TransientModel.h  models.h
source/Warframe/API/: Client.cpp  ManifestIndex.cpp
